@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4LogicalSurface.icc,v 1.3 2000-04-20 16:49:46 gcosmo Exp $
+// $Id: G4LogicalSurface.icc,v 1.4 2000-12-04 09:36:31 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 ////////////////////////////////////////////////////////////////////////
@@ -69,7 +69,12 @@ G4LogicalSurface::SetTransitionRadiationSurface(G4TransitionRadiationSurface*
 inline const G4LogicalSurface &
 G4LogicalSurface::operator=(const G4LogicalSurface &right)
 {
-	return right;
+	if (&right == this) return *this;
+	theName = right.theName;
+	theOpticalSurface = right.theOpticalSurface;
+	theTransRadSurface = right.theTransRadSurface;
+	
+	return *this;
 }
 
 inline G4int
